counter for records

--- a/company.html
+++ b/company.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
-		<link rel="stylesheet" href="css/company.css" />
+		<link rel="stylesheet" href="css/company.css?270320192100" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
-		<script defer src="js/common.js?200320192100"></script>
+		<script defer src="js/common.js?270320192100"></script>
 		<title>О компании – Floressence</title>
 	</head>
 
@@ -31,7 +31,7 @@
 			</nav>
 			<header>
 				<div>
-					<a class="logo" href="#" title="Слоган компании?"></a>
+					<a class="logo" href="/index.html" title="Слоган компании?"></a>
 					<ul class="lang_choice">
 						<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
 						<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
@@ -77,48 +77,50 @@
 						<div><span class="number">50000</span> формул</div>
 						<div><span class="number">1000</span> сырьевых материалов</div>
 					</div>
-					<div class=text_photo>
+					<div class="text_photo clearfix">
+						<div>
+							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
+							<div><a href="#img1">+</a></div>
+						</div>
 						<p>Вдохновение, которое исходит от прекрасного сырья,
 							всегда было центральной темой ароматных композиций Floressence.
 							Созданная в Грассе - мировой столице парфюмерии, с 1986 года,
 							 а затем в 2005 году поглощенная природными экспертами,
 							 Floressence была приобретена в 2018 году парой энтузиастов
-							 и ценителей парфюмерии. <br/>Кристиан Дюссолье и Луи Лекур вместе
-							 возглавляют команду из пятидесяти человек. <br/>Творения Floressence
+							 и ценителей парфюмерии.</p>
+							 <p>Кристиан Дюссолье и Луи Лекур вместе
+							 возглавляют команду из пятидесяти человек.</p>
+							 <p>Творения Floressence
 							 - это обонятельные подписи, сформированные по требованию, чтобы
 							 идеально отражать душу продуктов, которые они сопровождают.</p>
-						<div>
+						<!-- <a href="#_" class="lightbox" id="img1">
 							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
-							<div><a href="#img1">+</a></div>
-						</div>
-						<a href="#_" class="lightbox" id="img1">
-							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
-						</a>
+						</a> -->
 					</div>
-					<div class=photo_text>
+					<div class="photo_text clearfix">
 						<div>
 							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
 							<div><a href="#img2">+</a></div>
 						</div>
-						<a href="#_" class="lightbox" id="img2">
+						<!-- <a href="#_" class="lightbox" id="img2">
 							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
-						</a>
+						</a> -->
 						<p>Использование качественного сырья и обеспечение
 							поставок являются основой процесса разработки наших ароматов.</p>
 					</div>
 					<h2>Развитие и экспертиза</h2>
-					<div class=text_photo>
-						<p>Отдел развития, являющийся настоящим сердцем компании,
-							предоставляет клиентам высокий уровень знаний, адаптивность и
-							необходимую реактивность для успешного создания своих парфюмерных
-							проектов.</p>
+					<div class="text_photo clearfix">
 						<div>
 								<img src="./img/experts.jpg" alt="Эксперты"/>
 								<div><a href="#img3">+</a></div>
 						</div>
-						<a href="#_" class="lightbox" id="img3">
+						<p>Отдел развития, являющийся настоящим сердцем компании,
+							предоставляет клиентам высокий уровень знаний, адаптивность и
+							необходимую реактивность для успешного создания своих парфюмерных
+							проектов.</p>
+						<!-- <a href="#_" class="lightbox" id="img3">
 							<img src="./img/experts.jpg" alt="Эксперты"/>
-						</a>
+						</a> -->
 					</div>
 
 					<p>Обладая базой данных, содержащей около 50 000 формул,
