--- a/company.html
+++ b/company.html
@@ -77,50 +77,46 @@
 						<div><span class="number">50000</span> формул</div>
 						<div><span class="number">1000</span> сырьевых материалов</div>
 					</div>
-					<div class="text_photo clearfix">
+					<div class="text_photo">
 						<div>
-							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
-							<div><a href="#img1">+</a></div>
-						</div>
-						<p>Вдохновение, которое исходит от прекрасного сырья,
+							<p>Вдохновение, которое исходит от прекрасного сырья,
 							всегда было центральной темой ароматных композиций Floressence.
 							Созданная в Грассе - мировой столице парфюмерии, с 1986 года,
 							 а затем в 2005 году поглощенная природными экспертами,
 							 Floressence была приобретена в 2018 году парой энтузиастов
 							 и ценителей парфюмерии.</p>
-							 <p>Кристиан Дюссолье и Луи Лекур вместе
-							 возглавляют команду из пятидесяти человек.</p>
-							 <p>Творения Floressence
-							 - это обонятельные подписи, сформированные по требованию, чтобы
-							 идеально отражать душу продуктов, которые они сопровождают.</p>
-						<!-- <a href="#_" class="lightbox" id="img1">
-							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
-						</a> -->
+						</div>
+						<div>
+	 						<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
+	 						<div><a href="#img1">+</a></div>
+	 					</div>
 					</div>
-					<div class="photo_text clearfix">
+					<p>Кристиан Дюссолье и Луи Лекур вместе
+					возглавляют команду из пятидесяти человек.</p>
+					<p>Творения Floressence – это обонятельные подписи, сформированные по требованию,
+						чтобы идеально отражать душу продуктов, которые они сопровождают.</p>
+					<div class="photo_text">
 						<div>
 							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
 							<div><a href="#img2">+</a></div>
 						</div>
-						<!-- <a href="#_" class="lightbox" id="img2">
-							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
-						</a> -->
-						<p>Использование качественного сырья и обеспечение
+						<div>
+							<p>Использование качественного сырья и обеспечение
 							поставок являются основой процесса разработки наших ароматов.</p>
+						</div>
 					</div>
 					<h2>Развитие и экспертиза</h2>
-					<div class="text_photo clearfix">
+					<div class="text_photo">
+						<div>
+							<p>Отдел развития, являющийся настоящим сердцем компании,
+							предоставляет клиентам высокий уровень знаний, адаптивность и
+							необходимую реактивность для успешного создания своих парфюмерных
+							проектов.</p>
+						</div>
 						<div>
 								<img src="./img/experts.jpg" alt="Эксперты"/>
 								<div><a href="#img3">+</a></div>
 						</div>
-						<p>Отдел развития, являющийся настоящим сердцем компании,
-							предоставляет клиентам высокий уровень знаний, адаптивность и
-							необходимую реактивность для успешного создания своих парфюмерных
-							проектов.</p>
-						<!-- <a href="#_" class="lightbox" id="img3">
-							<img src="./img/experts.jpg" alt="Эксперты"/>
-						</a> -->
 					</div>
 
 					<p>Обладая базой данных, содержащей около 50 000 формул,
