--- a/company.html
+++ b/company.html
@@ -86,6 +86,9 @@
 							 Floressence была приобретена в 2018 году парой энтузиастов
 							 и ценителей парфюмерии.</p>
 						</div>
+						<a href="#_" class="lightbox" id="img1">
+							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
+						</a>
 						<div>
 	 						<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
 	 						<div><a href="#img1">+</a></div>
@@ -100,6 +103,9 @@
 							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
 							<div><a href="#img2">+</a></div>
 						</div>
+						<a href="#_" class="lightbox" id="img2">
+								<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
+							</a>
 						<div>
 							<p>Использование качественного сырья и обеспечение
 							поставок являются основой процесса разработки наших ароматов.</p>
@@ -113,6 +119,9 @@
 							необходимую реактивность для успешного создания своих парфюмерных
 							проектов.</p>
 						</div>
+						<a href="#_" class="lightbox" id="img3">
+								<img src="./img/experts.jpg" alt="Эксперты"/>
+							</a>
 						<div>
 								<img src="./img/experts.jpg" alt="Эксперты"/>
 								<div><a href="#img3">+</a></div>
