base style, nav

--- a/404.html
+++ b/404.html
@@ -19,9 +19,10 @@
 
 	<body onload="resize();" onresize="resize();">
 		<div class="container">
+			<span></span>
 			<nav>
 				<ul>
-					<li><span class="selected">О компании</span></li>
+					<li><a href="#" title="О компании">О компании</span></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
@@ -44,20 +45,21 @@
 				</div>
 			</header>
 			<article>
+				<div class="brief">
+					<h1>HTTP 404</h1>
+					<p>Не удается найти веб-страницу или документ.</p>
+				</div>
 				<div class="content">
-					<h1>404. История компании</h1>
-					<h3>Еще один интригующий заголовок</h3>
-					<h2>Не удается найти веб-страницу или документ.</h2>
-					<p>Новое поколение оборудования с высокоточными роботами
-						позволяет разрабатывать и производить ароматизаторы,
-						адаптированные к вашим ожиданиям, от килограмма до нескольких тонн.
-						Качество нашей продукции соответствует строгому процессу отслеживания.</p>
-					<p>Возможные причины, по которым это произошло:</p>
+					<!-- <h2>Не удается найти веб-страницу или документ.</h2> -->
+					<p>Обозревателю удалось подключиться к веб-узлу,
+						но запрошенная страница не найдена. Возможно,
+						веб-страница временно недоступна. Кроме того,
+						страница может быть изменена, перемещена или удалена.
+					</p>
+					<p>Возможные причины, по которым возникла эта ошибка:</p>
 					<ul>
-						<li>страница временно недоступна</li>
-						<li>ошибка или опечатка в адресе</li>
-						<li>страница была удалена</li>
-						<li>внезапно пропал Интернет</li>
+						<li>Возможно, сделана опечатка в адресе</li>
+						<li>Если вы перешли по ссылке, возможно, что она устарела</li>
 					</ul>
 				</div>
 			</article>
