--- a/company.html
+++ b/company.html
@@ -21,6 +21,7 @@
 
 	<body onload="resize();" onresize="resize();">
 		<div class="container">
+			<span></span>
 			<nav>
 				<ul>
 					<li><span class="selected">О компании</span></li>
