--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 	<body onload="resize();" onresize="resize();">
 		<div class="container">
+			<span></span>
 			<nav>
 				<ul>
 					<li><a href="/company.html" title="О компании">О компании</a></li>
