--- a/company.html
+++ b/company.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js?270320192100"></script>
+		<script defer src="js/lightbox.js"></script>
 		<title>О компании – Floressence</title>
 	</head>
 
@@ -87,12 +88,8 @@
 							 Floressence была приобретена в 2018 году парой энтузиастов
 							 и ценителей парфюмерии.</p>
 						</div>
-						<a href="#_" class="lightbox" id="img1">
-							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
-						</a>
-						<div>
+						<div class="lb action">
 	 						<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
-	 						<div><a href="#img1">+</a></div>
 	 					</div>
 					</div>
 					<p>Кристиан Дюссолье и Луи Лекур вместе
@@ -100,13 +97,9 @@
 					<p>Творения Floressence – это обонятельные подписи, сформированные по требованию,
 						чтобы идеально отражать душу продуктов, которые они сопровождают.</p>
 					<div class="photo_text">
-						<div>
+						<div class="lb action">
 							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
-							<div><a href="#img2">+</a></div>
 						</div>
-						<a href="#_" class="lightbox" id="img2">
-								<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
-							</a>
 						<div>
 							<p>Использование качественного сырья и обеспечение
 							поставок являются основой процесса разработки наших ароматов.</p>
@@ -120,12 +113,8 @@
 							необходимую реактивность для успешного создания своих парфюмерных
 							проектов.</p>
 						</div>
-						<a href="#_" class="lightbox" id="img3">
+						<div class="lb action">
 								<img src="./img/experts.jpg" alt="Эксперты"/>
-							</a>
-						<div>
-								<img src="./img/experts.jpg" alt="Эксперты"/>
-								<div><a href="#img3">+</a></div>
 						</div>
 					</div>
 
