about company: wide background, big picture

--- a/company.html
+++ b/company.html
@@ -16,7 +16,6 @@
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js?270320192100"></script>
-		<script defer src="js/lightbox.js"></script>
 		<title>О компании – Floressence</title>
 	</head>
 
@@ -57,10 +56,7 @@
 					<div>
 						<p>Floressence использует свой опыт, основанный на
 							 3 фундаментальных принципах: знания, креативность
-							 и надежность - с опытом и ноу-хау в области парфюмерных
-							 композиций, признанными более 30 лет благодаря
-							 талантливой команде создателей ароматов и инициативной
-							 группе оценки и маркетинга, В целом это гарантирует постоянное
+							 и надежность. В целом это гарантирует постоянное
 							 качество и оперативность в соответствии с потребностями каждого
 							 клиента.</p>
 					</div>
@@ -98,14 +94,16 @@
 					<div class="text_photo">
 						<div>
 							<p>Вдохновение, которое исходит от прекрасного сырья,
-							всегда было центральной темой ароматных композиций Floressence.
+							всегда было центральной темой композиций Floressence.
 							Созданная в Грассе - мировой столице парфюмерии, с 1986 года,
-							 а затем в 2005 году поглощенная природными экспертами,
+							 а затем в 2005 года, поглощенная природными экспертами,
 							 Floressence была приобретена в 2018 году парой энтузиастов
-							 и ценителей парфюмерии.</p>
+							 и ценителей парфюмерии. И еще сколько угодно текста, много, много текста. </p>
 						</div>
 						<div class="lb action">
-	 						<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
+							<div>
+	 							<img src="./img/dussoullier_lecoeur.jpg" alt="Дюссолье и Лекур"/>
+							</div>
 	 					</div>
 					</div>
 					<p>Кристиан Дюссолье и Луи Лекур вместе
@@ -114,7 +112,9 @@
 						чтобы идеально отражать душу продуктов, которые они сопровождают.</p>
 					<div class="photo_text">
 						<div class="lb action">
-							<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
+							<div>
+								<img src="./img/seeds.jpg" alt="Сырье для ароматов"/>
+							</div>
 						</div>
 						<div>
 							<p>Использование качественного сырья и обеспечение
@@ -130,7 +130,9 @@
 							проектов.</p>
 						</div>
 						<div class="lb action">
+							<div>
 								<img src="./img/experts.jpg" alt="Эксперты"/>
+							</div>
 						</div>
 					</div>
 
@@ -154,14 +156,13 @@
 						ароматные предложения, которые отвечают на их резюме. Мы разрабатываем эти
 						специально разработанные формулы с качественным сырьем и желанием предложить
 						наиболее эффективные решения.</p>
-				</div>
 
 					<div class="preview company">
-						<div>
-						</div>
+						<span></span>
 					</div>
+				</div>
 
-					<div class="content">
+				<div class="content">
 						<div class="evidence_wrap">
 							<div>
 								<h3>Сила продаж</h3>
