--- a/expertise.html
+++ b/expertise.html
@@ -98,82 +98,88 @@
 				<div class="preview experts">
 					<ul class="experts">
 						<li>
-							<div class="averse">
-								<img src="./img/ng-pied.jpg" alt="Натали Желан"/>
-								<span>Натали ЖЕСЛАН</span>
-							</div>
-							<div class="reverse">
-								<div>
-									<div>
-										<img src="./img/ng-pied.jpg" alt="Натали Желан"/>
-									</div>
+							<div>
+								<div class="averse">
+									<img src="./img/ng-pied.jpg" alt="Натали Желан"/>
 									<span>Натали ЖЕСЛАН</span>
 								</div>
-								<p>Родившаяся в Грассе - на юге Франции - и ее мать
-									из Нормандии, на севере, с большим географическим
-									и культурным разрывом, ничто не предопределило
-									 Натали Жеслан стать парфюмером. Прошла простую
-									 летнюю работу помощником техника парфюмерии
-									 в NAARDEN, где Натали открыла для себя чудеса
-									 аромата. Голландская компания оставила ее после
-									 летней работы и в конце 80-х перевела ее в Париж,
-									 чтобы помогать "Мастерам парфюмерии". От квеста
-									 до ARGEVILLE, а затем от FLORESSENCE в 2006 году,
-									  любопытство и страсть Натали привели ее на довольно
-									  необычный карьерный путь.</p>
+								<div class="reverse">
+									<div>
+										<div>
+											<img src="./img/ng-pied.jpg" alt="Натали Жеcлан"/>
+										</div>
+										<span>Натали ЖЕСЛАН</span>
+									</div>
+									<p>Родившаяся в Грассе - на юге Франции - и ее мать
+										из Нормандии, на севере, с большим географическим
+										и культурным разрывом, ничто не предопределило
+										 Натали Жеслан стать парфюмером. Прошла простую
+										 летнюю работу помощником техника парфюмерии
+										 в NAARDEN, где Натали открыла для себя чудеса
+										 аромата. Голландская компания оставила ее после
+										 летней работы и в конце 80-х перевела ее в Париж,
+										 чтобы помогать "Мастерам парфюмерии".
+										 От квеста  до ARGEVILLE, а затем от FLORESSENCE в 2006 году,
+										  любопытство и страсть Натали привели ее на довольно
+										  необычный карьерный путь.  </p>
+									  </div>
 							</div>
 						</li>
 						<li>
-							<div class="averse">
-								<img src="./img/dm-pied.jpg" alt="Даниэль Маникан"/>
-								<span>Даниэль МАНИКАН</span>
-							</div>
-							<div class="reverse">
-								<div>
-									<div>
-										<img src="./img/dm-pied.jpg" alt="Даниэль Маникан"/>
-									</div>
+							<div>
+								<div class="averse">
+									<img src="./img/dm-pied.jpg" alt="Даниэль Маникан"/>
 									<span>Даниэль МАНИКАН</span>
 								</div>
-								<p>Даниэль Маникан является наследницей семейной
-									традиции: ее дедушка был парфюмером, и за ним последовало
-									 немало химиков. С самого начала, ориентируясь
-									 на химию, Даниэль прошла путь по всем позициям
-									 в области разработки ароматов в лаборатории
-									 FLORESSENCE с 1989 года. От контроля качества
-									 до законодательных департаментов она очень рано
-									 участвовала в разработке ароматов для средств по
-									  уходу за кожей. Ее опыт в области высококачественного
-									  сырья берет свое начало с тех лет, когда она
-									  занимала должность менеджера по законодательству,
-									  где повседневная прерогатива наших клиентов-косметологов
-									   - «без присмотра и ухода».</p>
+								<div class="reverse">
+									<div>
+										<div>
+											<img src="./img/dm-pied.jpg" alt="Даниэль Маникан"/>
+										</div>
+										<span>Даниэль МАНИКАН</span>
+									</div>
+									<p>Даниэль Маникан является наследницей семейной
+										традиции: ее дедушка был парфюмером, и за ним последовало
+										 немало химиков. С самого начала, ориентируясь
+										 на химию, Даниэль прошла путь по всем позициям
+										 в области разработки ароматов в лаборатории
+										 FLORESSENCE с 1989 года. От контроля качества
+										 до законодательных департаментов она очень рано
+										 участвовала в разработке ароматов для средств по
+										  уходу за кожей. Ее опыт в области высококачественного
+										  сырья берет свое начало с тех лет, когда она
+										  занимала должность менеджера по законодательству,
+										  где повседневная прерогатива наших клиентов-косметологов
+										   - «без присмотра и ухода».  </p>
+								</div>
 							</div>
 						</li>
 						<li>
-							<div class="averse">
-								<img src="./img/pm-pied.jpg" alt="Патрис Мартен"/>
-								<span>Патрис МАРТЕН</span>
-							</div>
-							<div class="reverse">
-								<div>
-									<div>
-										<img src="./img/pm-pied.jpg" alt="Патрис Мартен"/>
-									</div>
+							<div>
+								<div class="averse">
+									<img src="./img/pm-pied.jpg" alt="Патрис Мартен"/>
 									<span>Патрис МАРТЕН</span>
 								</div>
-								<p>Патрис Мартен, родом из семьи парфюмеров из мировой
-									 парфюмерной столицы Грасс, и после двух лет
-									 бизнес-исследований, поступил в Школу парфюмерии
-									 в Руре в Грассе в 1976 году. Это истинное призвание
-									  побудило его изучить все аспекты этой профессии.
-									  Парфюмер для компании ROURE в Грассе и Париже
-									  в течение 80–90-х годов, он взял перерыв, чтобы
-									  преподавать в ASFO (Союз парфюмерии). Наконец он
-									  возобновил свою роль парфюмера в компании Aromafleur.
-									   С 2012 года Патрис создает парфюмерные творения
-									   во FLORESSENCE.</p>
-							</div>
+								<div class="reverse">
+									<div>
+										<div>
+											<img src="./img/pm-pied.jpg" alt="Патрис Мартен"/>
+										</div>
+										<span>Патрис МАРТЕН</span>
+									</div>
+									<p>Патрис Мартен, родом из семьи парфюмеров из мировой
+										 парфюмерной столицы Грасс, и после двух лет
+										 бизнес-исследований, поступил в Школу парфюмерии
+										 в Руре в Грассе в 1976 году. Это истинное призвание
+										  побудило его изучить все аспекты этой профессии.
+										  Парфюмер для компании ROURE в Грассе и Париже
+										  в течение 80–90-х годов, он взял перерыв, чтобы
+										  преподавать в ASFO (Союз парфюмерии). Наконец он
+										  возобновил свою роль парфюмера в компании Aromafleur.
+										   С 2012 года Патрис создает парфюмерные творения
+										   во FLORESSENCE.</p>
+									   </div>
+								   </div>
 						</li>
 					</ul>
 				</div>
