--- a/expertise.html
+++ b/expertise.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
-		<link rel="stylesheet" href="css/expertise.css" />
+		<link rel="stylesheet" href="css/expertise.css?060420192200" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js?030420192100"></script>
