--- a/expertise.html
+++ b/expertise.html
@@ -12,9 +12,11 @@
 		<link rel="stylesheet" href="css/video.css" />
 		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
+		<link rel="stylesheet" href="css/company.css?270320192100" />
 		<link rel="stylesheet" href="css/expertise.css?060420192200" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
+		<script defer src="js/swiper.js"></script>
 		<script defer src="js/common.js?030420192100"></script>
 		<title>Наши эксперты – Floressence</title>
 	</head>
@@ -202,8 +204,56 @@
 			</article>
 
 			<footer>
-				<div>
-					<div class="preview down_level"></div>
+					<div class="down_level">
+						<div class="gallery">
+							<div class="swiper">
+								<ul class="swiper-wrapper">
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<!-- <li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li>
+									<li class="swiper-slide">
+										<div>
+											<img src="./img/flo_xs.jpg" alt="Продукция" />
+										</div>
+									</li> -->
+								</ul>
+								<span class="swiper-notification"></span>
+							</div>
+							<div class="button prev"></div>
+							<div class="button next"></div>
+						</div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
