--- a/expertise.html
+++ b/expertise.html
@@ -233,23 +233,8 @@
 											<img src="./img/flo_xs.jpg" alt="Продукция" />
 										</div>
 									</li>
-									<!-- <li class="swiper-slide">
-										<div>
-											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
-									</li>
-									<li class="swiper-slide">
-										<div>
-											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
-									</li>
-									<li class="swiper-slide">
-										<div>
-											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
-									</li> -->
 								</ul>
-								<span class="swiper-notification"></span>
+								<!-- <span class="swiper-notification"></span> -->
 							</div>
 							<div class="button prev"></div>
 							<div class="button next"></div>
