--- a/expertise.html
+++ b/expertise.html
@@ -14,9 +14,11 @@
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/company.css?270320192100" />
 		<link rel="stylesheet" href="css/expertise.css?060420192200" />
+		<link rel="stylesheet" href="css/lightbox.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/swiper.js"></script>
+		<script defer src="js/lightbox.js"></script>
 		<script defer src="js/common.js?030420192100"></script>
 		<title>Наши эксперты – Floressence</title>
 	</head>
@@ -209,37 +211,36 @@
 							<div class="swiper">
 								<ul class="swiper-wrapper">
 									<li class="swiper-slide">
-										<div>
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
 											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
+										</a>
 									</li>
 									<li class="swiper-slide">
-										<div>
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
 											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
+										</a>
 									</li>
 									<li class="swiper-slide">
-										<div>
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
 											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
+										</a>
 									</li>
 									<li class="swiper-slide">
-										<div>
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
 											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
+										</a>
 									</li>
 									<li class="swiper-slide">
-										<div>
+										<a href="./img/flo_xs.jpg" data-lightbox="gallery" title="">
 											<img src="./img/flo_xs.jpg" alt="Продукция" />
-										</div>
+										</a>
 									</li>
 								</ul>
-								<!-- <span class="swiper-notification"></span> -->
-							</div>
+								</div>
 							<div class="button prev"></div>
 							<div class="button next"></div>
 						</div>
-				</div>
+					</div>
 				<div>
 					<div class="footer_wrapper">
 						<div>
