--- a/expertise.html
+++ b/expertise.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/company.css?270320192100" />
 		<link rel="stylesheet" href="css/expertise.css?060420192200" />
+		<link rel="stylesheet" href="css/gallery.css" />
 		<link rel="stylesheet" href="css/lightbox.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
