--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</nav>
 			<header>
 				<div>
-					<a class="logo" href="#" title="Слоган компании?"></a>
+					<a class="logo" href="/index.html" title="Слоган компании?"></a>
 					<ul class="lang_choice">
 						<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
 						<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
