--- a/homecare.html
+++ b/homecare.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 				<script defer src="js/common.js?270320192100"></script>
-		<title>Парфюм – Floressence</title>
+		<title>Забота о доме – Floressence</title>
 	</head>
 
 	<body onload="resize();" onresize="resize();">
@@ -48,31 +48,40 @@
 			</header>
 			<article>
 				<div class="content">
-					<h1>Парфюм</h1>
+					<h1>Забота о доме</h1>
 					<div class="photo_text">
 						<div>
-							<img src="./img/parfum.jpg" alt="Парфюмерия"/>
+							<img src="./img/habitat.jpg" alt="Парфюмерия"/>
 						</div>
 						<div>
-								<p>Духи, символ богов в античности, являются неотъемлемым элементом соблазнения.
-									Давно зарезервированный для элиты, он демократизировался в девятнадцатом веке,
-									 чтобы сегодня стать ежедневной лаской. </p>
-								<p>Профессионалы, имеющие опыт работы с современными техниками оформления, наши
-									парфюмеры разрабатывают оригинальные композиции для алкогольной парфюмерии.
-									Наши творческие коллективы предвосхищают тенденции рынка и опираются на особые
-									 потребительские ценности для разработки композиций, которые оставят свой след.
-									 «Зеленое» движение также лежит в основе наших проблем. В этом контексте наши
-									 парфюмеры изучают и разрабатывают ароматы, которые соответствуют требованиям 100%
-									 натуральности.</p>
+								<p>Floressence предлагает экспертные знания, чтобы предложить свежесть и чистоту
+									в продуктах по уходу на дому. Наши ароматы украшают прачечную и дом свежими
+									и натуральными ароматами для чистого ощущения. Мы объединяем наши ноу-хау в
+									разработке парфюмерии с технической базой наших клиентов. Мы можем предложить
+									сложные ароматы по очень привлекательной цене.</p>
+								<p>Наша команда опытных создателей ароматов стремится определить вашу обонятельную
+									индивидуальность и развить ваш фирменный аромат. Floressence создает и производит
+									специальные ароматические составы для: </p>
 								<ul>
-									<li>женская парфюмерия </li>
-									<li>мужская парфюмерия</li>
-									<li>детская парфюмерия</li>
-									<li>этнические духи</li>
-									<li>Натуральные духи</li>
+									<li>моющих средств - стиральных порошков, умягчителей</li>
+									<li>бытовых чистящих средств - для пола / салфеток / окон </li>
+									<li>технических продуктов - туалетных таблеток для сектора освежителей воздуха</li>
 								</ul>
 							</div>
 					</div>
+					<p>Постоянно стремясь придерживаться политики инновационных продуктов, мы внимательно
+						следим за маркетингом на этом динамичном рынке, который переживает как сильный
+						рост, так и глубокие изменения. Наши команды посоветуют вам, как постоянно
+						придавать продукту дополнительную ценность и изысканность благодаря оригинальности
+						 его ароматов и букетов, чтобы потребители постоянно обновляли сенсорные ощущения
+						 и получали удовольствие каждый раз, когда они используют продукт. </p>
+					<ul>
+						<li>Аэрозоли </li>
+						<li>Распылители</li>
+						<li>Ароматические свечи и натуральные диффузоры </li>
+						<li>Электрические диффузоры</li>
+						<li>Ароматические лампы</li>
+					</ul>
 				</div>
 			</article>
 
